--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,66 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
 	id="WebApp_ID" version="4.0">
+	<!-- tag order -->
+	<!-- 
+		<display-name?>
+		<description?>
+		<distributable?>
+		<context-param*>
+		<filter*>
+		<filter-mapping*>
+		<listener*>
+		<servlet*>
+		<servlet-mapping*>
+		<welcome-file-list?>
+		<error-page*>
+	 -->
+	<!-- // tag order -->
+	
 	<display-name>servlet-jsp-sample</display-name>
+	<context-param>
+		<param-name>servletContext.env</param-name>
+		<param-value>local</param-value>
+	</context-param>
+	
+	<filter>
+		<filter-name>FlowFilter</filter-name>
+		<filter-class>my.servlet.sample.filter.FlowFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>FlowFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<!-- or <servlet-name></servlet-name> -->
+	</filter-mapping>
+	
+	<filter>
+		<filter-name>EncodingFilter</filter-name>
+		<filter-class>my.servlet.sample.filter.EncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>EncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<listener>
+		<listener-class>my.servlet.sample.listener.RequestSampleListener</listener-class>
+	</listener>
+	
+	<listener>
+		<listener-class>my.servlet.sample.listener.HttpSessionSampleListener</listener-class>
+	</listener>
+	
+	<listener>
+		<listener-class>my.servlet.sample.listener.HttpSessionAttributeSampleListener</listener-class>
+	</listener>
+	
+	<listener>
+		<listener-class>my.servlet.sample.listener.ServletContextSampleListener</listener-class>
+	</listener>
 	
 	<servlet>
 		<servlet-name>TestXmlServlet</servlet-name>
@@ -14,18 +73,26 @@
 		<url-pattern>/xmlservlet</url-pattern>
 	</servlet-mapping>
 	
-	<!--resource-ref>
-		<description>Oracle Datasource example</description>
-		<res-ref-name>jdbc/myoracle</res-ref-name>
-		<res-type>javax.sql.DataSource</res-type>
-		<res-auth>Container</res-auth>
-	</resource-ref>
-
-	<jsp-config>
-		<taglib>
-			<taglib-uri>http://myTags.com</taglib-uri>
-			<taglib-location>/WEB-INF/myTag.tld</taglib-location>
-		</taglib>
-
-	</jsp-config-->
+	<servlet>
+		<servlet-name>InitServlet</servlet-name>
+		<servlet-class>my.servlet.sample.config.InitServlet</servlet-class>
+		<init-param>
+			<param-name>environment</param-name>
+			<param-value>local</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>InitServlet</servlet-name>
+		<url-pattern>/initservlet</url-pattern>
+	</servlet-mapping>
+	
+	<error-page>
+		<error-code>405</error-code>
+		<location>/errorHandler</location>
+	</error-page>
+	<error-page>
+		<exception-type>java.lang.NullPointerException</exception-type>
+		<location>/errorHandler</location>
+	</error-page>
 </web-app>
